--- a/wp-content/themes/askonasholt2016/assets/scss/components/_home-hero.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/components/_home-hero.scss
@@ -20,6 +20,11 @@ body.page {
 		    height: 70vh;
 		    @include full-bg;
 		}
+		.slick-slide {
+			&:focus {
+				outline: none;
+			}
+		}
 		.center-image {
 			height: 69vh;
 			margin: 1em 1em;
