--- a/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
+++ b/wp-content/themes/askonasholt2016/assets/stylesheets/foundation.css
@@ -9255,6 +9255,9 @@ pre {
 .temp-testing-mp3 {
   margin-bottom: 100vh; }
 
+.archive__load-more {
+  visibility: hidden !important; }
+
 .is-hidden-onload {
   opacity: 0; }
 
@@ -9316,17 +9319,23 @@ p.byline.author {
 .simple-listing {
   line-height: 60px; }
 
-.section-header {
+.section-header,
+.free-text-area h4 {
   padding-top: 25px;
   padding-bottom: 25px;
   font-family: "GeometricSlab703BT-Light";
   margin-bottom: 0; }
-  .section-header a {
+  .section-header a,
+  .free-text-area h4 a {
     font-size: 17px;
     color: inherit; }
 
+.free-text-area h4 {
+  padding-top: 0; }
+
 @media screen and (max-width: 39.9375em) {
-  .section-header {
+  .section-header,
+  .free-text-area h4 {
     font-size: 1.4rem; } }
 
 div#narrow-text-page {
@@ -9334,9 +9343,12 @@ div#narrow-text-page {
   margin: 0 auto; }
 
 @media screen and (min-width: 40em) {
-  .section-header {
+  .section-header,
+  .free-text-area h4 {
     padding-top: 25px;
-    padding-bottom: 25px; } }
+    padding-bottom: 25px; }
+  .free-text-area h4 {
+    padding-top: 0; } }
 
 body.search .blogpost-entry {
   display: inline; }
@@ -9845,13 +9857,22 @@ div#search-toggle {
   .top-bar .menu li:not(:last-child) {
     height: 84px; } }
 
+/*
 .menu-item.menu-item-has-children.is-dropdown-submenu-parent:after {
-  content: url("../images/down-arrow-small.png");
-  display: block;
-  position: absolute;
-  top: 31%;
-  right: 0; }
-
+	content:  url('../images/down-arrow-small.png');
+    display: block;
+    // width: 10px;
+    // height: 0;
+    // border: inset 6px;
+    // border-color: #BA0C2F transparent transparent;
+    // border-top-style: solid;
+    // border-bottom-width: 0;
+    position: absolute;
+    top: 31%;
+    //margin-top: 0;
+    right: 0
+}
+*/
 @media screen and (min-width: 64em) {
   .fd-animate ul li ul li {
     max-height: 0;
@@ -15585,6 +15606,9 @@ body.page div.slick-slider .center.slick-initialized.slick-slider {
   -webkit-background-size: cover;
   background-size: cover; }
 
+body.page div.slick-slider .slick-slide:focus {
+  outline: none; }
+
 body.page div.slick-slider .center-image {
   height: 69vh;
   margin: 1em 1em;
@@ -15914,7 +15938,7 @@ body.single-artists i.fa.fa-angle-right.slick-arrow {
 
 button.hero-button {
   padding: 10px;
-  margin-top: 5px;
+  margin-top: 3px;
   background: rgba(186, 12, 47, 0.8); }
   button.hero-button a {
     color: white;
