--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_artist-filtering.scss
@@ -143,9 +143,9 @@ body.post-type-archive-events {
 			@extend .button;
 			background-color: $white;
 			color: $lightbrown;
-			border: 1px solid $brown;
 			color: $brown;
 			margin-bottom: 0;
+			padding: ($sitepadding / 4);
 			
 			&:active,
 			&:focus,
@@ -224,7 +224,7 @@ body.post-type-archive-events {
 		ul.children {
 			position: absolute;
 			display: inline-block;
-			bottom: -2.5em; 
+			bottom: -($sitepadding * 1.5);
 			@include center(x);
 			width: 100%;
 
