--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -109,9 +109,9 @@ p.byline.author { display: none; }
     padding-top: $sitepadding;
     padding-bottom: $sitepadding;
     //color: $brand-red;
-    font-family: $serif-font;
     margin-bottom: 0;
     //@include grid-column(12);
+    font-weight: bold;
     a {
         font-size: 17px;
         color: inherit;
