--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_single-page-nav.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_single-page-nav.scss
@@ -16,13 +16,13 @@
 
         li {
         	padding: 0 $sitepadding-small;
-        	color: #808080;
+        	color: #b2b2b2;
             line-height: 60px;
             font-size: 16px;
+            text-transform: uppercase;
 
         	a {
-        		color: #808080;
-        		font-weight: bold;
+        		color: #b2b2b2;
         	}
         }
 
