--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_single-page-nav.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_single-page-nav.scss
@@ -22,6 +22,7 @@
             text-transform: uppercase;
 
         	a {
+                font-weight: bold;
         		color: #b2b2b2;
         	}
         }
