--- a/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/modules/_magazine-item.scss
@@ -1,6 +1,5 @@
 //individual magazine posts on archive
 .magazine-item {
-	border: 1px solid #dddddd;
 	margin-bottom: 2em;
 	transition: 0.5s;
 	background-color: #ffffff;
@@ -12,7 +11,7 @@
 	}
 
 	.magazine-item-container {
-		padding: 0 1em 1em;
+		padding: 0 1em 0;
 		min-height: 132px;
 		.read-more {
 			font-weight: bold;
@@ -56,7 +55,7 @@
 	    font-size: 1.1rem;
 	}
 	.magazine-item-header {
-		//margin: 1em 0 0 0;
+		margin-bottom: 0;
 		font-size: 1.1rem;
 		font-weight: bold;
 		
