--- a/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_settings.scss
@@ -87,7 +87,7 @@ $white: #fefefe;
 $body-background: $white;
 $body-font-color: $black;
 //$body-font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-$body-font-family: "Brown-Pro-Light", AdobeBlank;
+$body-font-family: "Brown-Pro-Regular", AdobeBlank;
 $body-antialiased: true;
 $global-margin: 1rem;
 $global-padding: 1rem;
